07. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- storing adddialog size and position added
	- option for thumbnail size added
	- save thumbnail size fixed
	- option for specify thumbnail file extensions added
	- save last selected dir on adddialog fixed

05. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- matching filetypes for context fixed
	- thumbnail storing added
	- loading exif data added (optional)

04. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
	- display success/fail of loading lib7zip if debug info is enabled

20. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- search did not return any result if not catalog node is selected (#3489441)

19. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- crash at search fixed (#3489211)
	- version increased to 1.8

18. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- handle multiline entries on whereisit csv import correctly
	- fix duplicate extension on whereisit cvs import (whereisit lite)
	- update last dir on import

15. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- archive line parsing fixed on lib7zip created archive contents (#3485434)
	- obsolete tab in generated archive file content on commwidget removed
	- set default rights for archive file properly
	- exec attribute on files inside archives scanned from lib7zip removed

14. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- set default rights for archive file on import properly
	- set last used dir on adddialog if type is not cd/dvd
	- use implicit font metrics local member instead creating on heap at progressdialog
	- scanning archives using lib7zip fixed
	- type conversion for permission string fixed

12. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- version increased to 1.7

04. Feb 2012 Christoph Thielecke <crissi99@gmx.de>
	- display archive contents at commwidget in better formated way
	- commwidget space issuses fixes
	- repaint commwidget only if nessary
	- qtlogo on tool button and menu entry fixed