@@ -4,6 +4,7 @@
 	- save thumbnail size fixed
 	- option for specify thumbnail file extensions added
 	- save last selected dir on adddialog fixed
+	- scroll to last folder in tree on adddialog init
 
 05. Mar 2012 Christoph Thielecke <crissi99@gmx.de>
 	- matching filetypes for context fixed
